<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
  >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.jgabrielfreitas.core.BlurImageView
            android:id="@+id/blurImage_View"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/img_profile"
            app:radius="4"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_Profile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/img_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp"/>

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/user_name"
            android:layout_below="@id/imageView_Profile"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/profile_Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_desc"
            android:layout_below="@id/UserName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/blurImage_View"
            android:layout_marginTop="20dp"
            android:divider="@drawable/horizontal_divider_shape"
            >
            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/imageViewEditProfile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_edit_profile"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/edit_profile" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/imageViewEditProfile"
                    android:layout_marginStart="20dp"

                    />
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/forward_string" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/imageViewFavorites"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_favourites"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/favorites" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/imageViewFavorites"
                    android:layout_marginStart="20dp"

                    />
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/forward_string" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/imageViewNotifications"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_notifications"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/notifications" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/imageViewNotifications"
                    android:layout_marginStart="20dp"
                    />
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/forward_string" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/imageViewInviteFriends"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_invitefriends"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/inviteFrnds" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inviteFrnds"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/imageViewInviteFriends"
                    android:layout_marginStart="20dp"

                    />
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/forward_string" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/imageViewAboutUs"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_info"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/aboutUs" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutUs"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/imageViewAboutUs"
                    android:layout_marginStart="20dp"
                    />
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/forward_string" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/imageViewHelp_Feedback"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_help_feedback"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/help_feedback" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_feedback"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/imageViewHelp_Feedback"
                    android:layout_marginStart="20dp"
                    />
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/forward_string" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="left"
                >
                <ImageView
                    android:id="@+id/imageViewSignOut"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_signout"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/signout" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signout"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/imageViewSignOut"
                    android:layout_marginStart="20dp"
                    />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>