<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Edit_ProfileActivity">

     <RelativeLayout
            android:id="@+id/imagesRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/imagesVP"
                android:layout_width="match_parent"
                android:layout_height="300dp">


            </androidx.viewpager.widget.ViewPager>

         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabDots"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginTop="280dp"
             app:tabGravity="center"
             app:tabBackground="@drawable/tab_selector"
             app:tabIndicatorHeight="0dp"
             android:background="#00000000"
             android:layout_alignParentBottom="false"
             />

         <ImageView
             android:id="@+id/ic_camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_camera"
                android:contentDescription="Camera" />

        </RelativeLayout>


     <RelativeLayout
         android:id="@+id/profiledetailsRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imagesRL"
         android:paddingStart="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/FullNameLabelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FullName"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/FullNameValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/FullName"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/GenderValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/female"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/AgeValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="26yrs"

                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/professionLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/professionLabelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profession"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/professionValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="Software Engineer"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:visibility="visible"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

          </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
